Bug 168691 - Color mode on images no longer works
Summary: Color mode on images no longer works
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Mohit Marathe
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Image-Colorize
  Show dependency treegraph
 
Reported: 2025-10-04 09:49 UTC by Regina Henschel
Modified: 2025-10-23 04:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2025-10-04 09:49:06 UTC
Start Impress, insert an image and select it.
Open the 'Image' toolbar in case it does not automatically opens.
The 'Image' toolbar has a drop-down list for "Image Mode" (.uno:GrafMode) with items: Default, Grayscale, Black/White, Watermark. Select "Grayscale".

Actual: Nothing happens
Expected: The image is displayed in gray.

I see the error in Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b1c0c4838d2e006ffa8e72516569ce8d13bdbe01
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

It was OK in Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 32; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 1 Regina Henschel 2025-10-04 09:54:59 UTC
It is OK in Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

The same drop-down list in the sidebar works as expected, only the toolbar item is broken.
Comment 2 Buovjaga 2025-10-04 11:19:18 UTC
Repro. For me the Image toolbar is overflowed and I have to access it by clicking the chevron and after closing and reopening it, the dropdown entry has returned back to Default.

This can't yet be bibisected as this is so new that the current Linux bibisect repo doesn't show it, latest commit:

Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Wed Sep 17 08:32:58 2025 +0200

    source 8ea8e254a3151f5390f3a10ff156fcaf8e7c5d5c
    
    source 8ea8e254a3151f5390f3a10ff156fcaf8e7c5d5c

Arch Linux 64-bit
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3c29e1277bda566b4455123a7a53c8f0fc6eda98
CPU threads: 8; OS: Linux 6.16; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 3 October 2025
Comment 3 Saburo 2025-10-22 03:27:10 UTC
bibisected with linux-64-26.2
commit eaa6757c5cb7865435367f0b80f13a8170f125a8
author	Mohit Marathe <mohit.marathe@collabora.com>	Mon Jul 21 13:00:36 2025 +0530

svx lok: .uno:GrafMode: add ColorMode parameter

To add a Color Mode menubutton with pre-canned values, we need to
send a uno command with a parameter with a particular color mode

Signed-off-by: Mohit Marathe <mohit.marathe@collabora.com>
Change-Id: Ic03e75d4e6431ebc6d071fa2dfbeb911e5a6d661
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188100

adding CC: Mohit Marathe
Please, take a look?
I can change the color mode from the sidebar, but not from the toolbar.
Comment 4 Commit Notification 2025-10-23 04:07:14 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/02ff629c0746fe704c6892a837bbc662936e7e41

tdf#168691 fix "Image Mode" and other toolbar buttons not working

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.